<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/background"
        android:padding="16dp"
    >
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/text_title1"
            android:layout_marginTop="44dp" app:layout_constraintHorizontal_bias="0.498"
            android:textColor="@color/text_0"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/text_title2"
            android:layout_marginTop="44dp" app:layout_constraintHorizontal_bias="0.498"
            android:textColor="@color/text_0"
    />

    <Button
            android:text="@string/button_select_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/button_select_date"
            android:textColor="@color/background"
            android:textStyle="bold"
            android:backgroundTint="@color/teal_0"
            android:layout_marginVertical="20sp"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_selected_date_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/text_selected_date_content"
            android:layout_marginTop="44dp" app:layout_constraintHorizontal_bias="0.498"
            android:textColor="@color/green_0"
            android:textSize="40sp"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_selected_date_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/text_selected_date_label"
            android:layout_marginTop="44dp" app:layout_constraintHorizontal_bias="0.498"
            android:textColor="@color/teal_0"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_age_in_minutes_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/text_age_in_minutes_content"
            android:layout_marginTop="44dp" app:layout_constraintHorizontal_bias="0.498"
            android:textColor="@color/green_0"
            android:textSize="40sp"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_age_in_minutes_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/text_age_in_minutes_label"
            android:layout_marginTop="44dp" app:layout_constraintHorizontal_bias="0.498"
            android:textColor="@color/teal_0"
    />

</LinearLayout>